Fix table row focus styling and make tooltip scollable instead of overflowing the screen

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,9 @@
     outline: none;
     box-shadow: none;
 }
-
+:focus {
+    outline-color: $primary;
+}
 *,
 *::before,
 *::after {
